--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,7 @@
             "console": "internalConsole",
             "stopAtEntry": false,
             "env": {
+                "DOTNET_CLI_TELEMETRY_OPTOUT": "1",
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "sourceFileMap": {
